# IW-2

./: .gitignore  CMakeLists.txt  main.c  main_forked.c
.github/workflows/: actions.yml
libs/matrix_count/include/: matrix_count.h
libs/matrix_count/src/: matrix_count.c
libs/matrix_count_forked/include/: matrix_count_forked.h
libs/matrix_count_forked/src/: matrix_count_forked.c
matrix_data/: matrix.txt  matrix_10_5.txt  matrix_3_2.txt  matrix_forked.txt
tests/: comparator.cpp  tests.cpp  tests_forked.cpp
